Fix item break in Chrome

--- a/src/components/Events/EventsContent/styles.module.scss
+++ b/src/components/Events/EventsContent/styles.module.scss
@@ -146,11 +146,12 @@
 
 > * {
   margin-bottom: 10px;
+  display: block;
+  break-inside: avoid-column;
 }
 
 > a {
   text-decoration: none;
-
   @media (max-width: $screen-xs) {
   }
 }
